--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "antd": "^3.8.4",
     "babel-plugin-import": "^1.8.0",
     "dva": "^2.4.0",
+    "dva-loading": "^2.0.5",
+    "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
